--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 								<li class="menu-item"><a class="menu-link" href="index.html#work"><div>Work</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="index.html#about"><div>About</div></a></li>
 								<li class="menu-item"><a class="menu-link" href="index.html#services"><div>Services</div></a></li>
-								<li class="menu-item"><a class="menu-link" href="index.html"><div>Reviews</div></a></li>
-								<li class="menu-item"><a class="menu-link" href="index.html"><div>Blog</div></a></li>
-								<li class="menu-item"><a class="menu-link" href="index.html"><div>Contact</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="index.html#reviews"><div>Reviews</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="index.html#blog"><div>Blog</div></a></li>
+								<li class="menu-item"><a class="menu-link" href="index.html#contact"><div>Contact</div></a></li>
 							</ul>
 
 						</nav><!-- #primary-menu end -->
@@ -302,7 +302,7 @@
 
 					<div class="container" style="padding: 120px 0"> 
 					<div class="heading-block text-center">
-					<div  class="before-heading" style="border-color: #f82586">What our Clients Say</div>
+					<div id="reviews" class="before-heading" style="border-color: #f82586">What our Clients Say</div>
 					<h2 class="text-transform-none fw-semibold">Testimonials</h2>
 					</div>
 					<div id="testimonials-carousel" class="owl-carousel carousel-widget testimonial testimonial-full bg-transparent mx-auto text-center" data-animate-in="fadeIn" data-animate-out="fadeOut" data-margin="24" data-nav="false" data-pagi="true" data-items="1" style="max-width: 740px">
@@ -335,7 +335,7 @@
 					</div>
 
 				<!-- Blog post -->
-				<h2 class="heading-block text-center" style="border-color: #F82586;">Our Latest News</h2>
+				<h2 id="blog" class="heading-block text-center" style="border-color: #F82586;">Our Latest News</h2>
 						<section class="mt-4">
 							<div>
 							<div id="oc-images" class="owl-carousel owl-carousel-full news-carousel header-stick mb-6 carousel-widget" data-margin="3" data-loop="true" data-stage-padding="50" data-pagi="false" data-items-xs="1" data-items-lg="2">
@@ -349,7 +349,7 @@
 							<h3>Brand Loyalty Is Everything! 6 Secrets Revealed By Experts</h3>
 							<span>February 20, 2023</span>
 							</div>
-							<a href="#" class="btn btn-sm btn-outline-light mx-0 mb-2">Read more</a>
+							<a href="https://melsoft.co.za/brand-loyalty-is-everything-6-secrets-from-experts/" class="btn btn-sm btn-outline-light mx-0 mb-2">Read more</a>
 							</div>
 							</div>
 							<div class="rounded-skill d-none d-sm-block" data-color="#F82586" data-trackcolor="rgba(255,255,255,0.4)" data-size="80" data-percent="75" data-width="3" data-animate="3000">7.5</div>
@@ -438,7 +438,7 @@
 						<div class="col-4 col-md-2 ms-md-auto">
 							<div class="widget">
 
-								<h4 class="">Contact Us</h4>
+								<h4 id="contact" class="">Contact Us</h4>
 
 								<ul class="widget-li-noicon widget_links ms-0">
 									<li><address><strong>Johannesburg (HQ)</strong><br>173 Oxford Road, Rosebank, Sandton, 2196<br><br>+27 81 716 7573<br>+27 11 282 0817</address></li>
